demo on downloading data from energyID

--- a/download_prices.ipynb
+++ b/download_prices.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import entsoe\n",
     "import json\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from openenergyid import const, TimeSeries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,55 +36,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "da_prices = client.query_day_ahead_prices(\n",
     "    country_code='BE',\n",
     "    start=pd.Timestamp('2020-01-01', tz='Europe/Brussels'),\n",
-    "    end=pd.Timestamp('2023-12-14', tz='Europe/Brussels'),\n",
+    "    end=pd.Timestamp('2023-12-21', tz='Europe/Brussels'),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "da_prices = da_prices.resample('15min').ffill()"
+    "da_prices = da_prices.to_frame(name=const.PRICE_DAY_AHEAD)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "da_prices.to_csv('da_prices.csv', header=False)"
+    "series = TimeSeries.from_pandas(da_prices)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "series.to_json(path='data/da_prices_be.json', indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "imbalance_prices = client.query_imbalance_prices(\n",
     "    country_code='BE',\n",
     "    start=pd.Timestamp('2020-01-01', tz='Europe/Brussels'),\n",
-    "    end=pd.Timestamp('2023-12-14', tz='Europe/Brussels'),\n",
+    "    end=pd.Timestamp('2023-12-21', tz='Europe/Brussels'),\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imbalance_prices.to_csv('imbalance_prices.csv')"
    ]
   }
  ],
