chore: Update pre-commit hooks with pyupgrade v3.16.0 refactoring to upgrade to python311

--- a/demo_capacity_analysis.ipynb
+++ b/demo_capacity_analysis.ipynb
@@ -347,18 +347,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#save output as our CapacityOutput object\n",
+    "# save output as our CapacityOutput object\n",
     "output = CapacityOutput(\n",
-    "        peaks=TimeSeries.from_pandas(analysis.find_peaks()),\n",
-    "        peak_details=[\n",
-    "            PeakDetail(\n",
-    "                peak_time=peak_time,\n",
-    "                peak_value=peak_value,\n",
-    "                surrounding_data=TimeSeries.from_pandas(surrounding_data)\n",
-    "            )\n",
-    "            for peak_time, peak_value, surrounding_data in analysis.find_peaks_with_surroundings()\n",
-    "        ]\n",
-    "    )\n",
+    "    peaks=TimeSeries.from_pandas(analysis.find_peaks()),\n",
+    "    peak_details=[\n",
+    "        PeakDetail(\n",
+    "            peak_time=peak_time,\n",
+    "            peak_value=peak_value,\n",
+    "            surrounding_data=TimeSeries.from_pandas(surrounding_data),\n",
+    "        )\n",
+    "        for peak_time, peak_value, surrounding_data in analysis.find_peaks_with_surroundings()\n",
+    "    ],\n",
+    ")\n",
     "\n",
     "# save the CapacityOutput object to a file\n",
     "with open(\"data/capacity/capacity_output.json\", \"w\") as f:\n",
@@ -396,16 +396,10 @@
     "        values = surrounding_data.values\n",
     "\n",
     "        ax = axs[i]\n",
-    "        ax.plot(\n",
-    "            timestamps, values, marker=\"o\", linestyle=\"-\", linewidth=2, markersize=6\n",
-    "        )\n",
-    "        ax.plot(\n",
-    "            peak_time, peak_value, marker=\"*\", color=\"red\", markersize=15, label=\"Peak\"\n",
-    "        )\n",
+    "        ax.plot(timestamps, values, marker=\"o\", linestyle=\"-\", linewidth=2, markersize=6)\n",
+    "        ax.plot(peak_time, peak_value, marker=\"*\", color=\"red\", markersize=15, label=\"Peak\")\n",
     "\n",
-    "        ax.set_title(\n",
-    "            f\"Peak: {peak_value:.2f} kW at {peak_time.strftime('%Y-%m-%d %H:%M')}\"\n",
-    "        )\n",
+    "        ax.set_title(f\"Peak: {peak_value:.2f} kW at {peak_time.strftime('%Y-%m-%d %H:%M')}\")\n",
     "        ax.set_ylabel(\"Power (kW)\")\n",
     "        ax.set_xlabel(\"Time\")\n",
     "\n",
@@ -427,9 +421,7 @@
     "        ax.legend()\n",
     "\n",
     "        # Highlight the padding area\n",
-    "        padding_minutes = (\n",
-    "            30  # Assuming 2 hours of padding (4 * 15 minutes on each side)\n",
-    "        )\n",
+    "        padding_minutes = 30  # Assuming 2 hours of padding (4 * 15 minutes on each side)\n",
     "        start_padding = peak_time - dt.timedelta(minutes=padding_minutes)\n",
     "        end_padding = peak_time + dt.timedelta(minutes=padding_minutes)\n",
     "        ax.axvspan(start_padding, end_padding, color=\"yellow\", alpha=0.2)\n",
@@ -476,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
