--- a/demo_energyid_download.ipynb
+++ b/demo_energyid_download.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('secrets.json') as f:\n",
+    "with open(\"secrets.json\") as f:\n",
     "    secrets = json.load(f)"
    ]
   },
@@ -53,13 +53,9 @@
    "outputs": [],
    "source": [
     "client = energyid.PandasClient(\n",
-    "    client_id=secrets['EnergyID_CLIENTID'],\n",
-    "    client_secret=secrets['EnergyID_CLIENTSECRET']\n",
+    "    client_id=secrets[\"EnergyID_CLIENTID\"], client_secret=secrets[\"EnergyID_CLIENTSECRET\"]\n",
     ")\n",
-    "client.authenticate(\n",
-    "    username=secrets['EnergyID_USERNAME'],\n",
-    "    password=secrets['EnergyID_PASSWORD']\n",
-    ")"
+    "client.authenticate(username=secrets[\"EnergyID_USERNAME\"], password=secrets[\"EnergyID_PASSWORD\"])"
    ]
   },
   {
@@ -85,10 +81,7 @@
    "outputs": [],
    "source": [
     "energy_balance = record.get_data(\n",
-    "    name='energyBalanceByCarrier',\n",
-    "    start='2023-01-01',\n",
-    "    end='2024-01-01',\n",
-    "    interval='PT15M'\n",
+    "    name=\"energyBalanceByCarrier\", start=\"2023-01-01\", end=\"2024-01-01\", interval=\"PT15M\"\n",
     ")"
    ]
   },
@@ -109,7 +102,11 @@
    "source": [
     "# Rename to standard metric names used in the Open Energy Library\n",
     "\n",
-    "energy_balance.columns = [const.ELECTRICITY_DELIVERED, const.ELECTRICITY_PRODUCED, const.ELECTRICITY_EXPORTED]"
+    "energy_balance.columns = [\n",
+    "    const.ELECTRICITY_DELIVERED,\n",
+    "    const.ELECTRICITY_PRODUCED,\n",
+    "    const.ELECTRICITY_EXPORTED,\n",
+    "]"
    ]
   },
   {
@@ -127,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_json(path='data/energy_balance_PT15M.json', indent=2)"
+    "data.to_json(path=\"data/energy_balance_PT15M.json\", indent=2)"
    ]
   }
  ],
@@ -147,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
