--- a/demo_mvlr.ipynb
+++ b/demo_mvlr.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data/mvlr/sample_gas.json', 'r') as f:\n",
+    "with open(\"data/mvlr/sample_gas.json\", \"r\") as f:\n",
     "    input_data = MultiVariableRegressionInput.model_validate_json(f.read())"
    ]
   },
