--- a/download_prices.ipynb
+++ b/download_prices.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('secrets.json') as f:\n",
+    "with open(\"secrets.json\") as f:\n",
     "    secrets = json.load(f)"
    ]
   },
@@ -29,9 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = entsoe.EntsoePandasClient(\n",
-    "    api_key=secrets['ENTSOE_APIKEY']\n",
-    ")"
+    "client = entsoe.EntsoePandasClient(api_key=secrets[\"ENTSOE_APIKEY\"])"
    ]
   },
   {
@@ -41,9 +39,9 @@
    "outputs": [],
    "source": [
     "da_prices = client.query_day_ahead_prices(\n",
-    "    country_code='BE',\n",
-    "    start=pd.Timestamp('2020-01-01', tz='Europe/Brussels'),\n",
-    "    end=pd.Timestamp('2023-12-21', tz='Europe/Brussels'),\n",
+    "    country_code=\"BE\",\n",
+    "    start=pd.Timestamp(\"2020-01-01\", tz=\"Europe/Brussels\"),\n",
+    "    end=pd.Timestamp(\"2023-12-21\", tz=\"Europe/Brussels\"),\n",
     ")"
    ]
   },
@@ -71,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "series.to_json(path='data/da_prices_be.json', indent=2)"
+    "series.to_json(path=\"data/da_prices_be.json\", indent=2)"
    ]
   },
   {
@@ -81,9 +79,9 @@
    "outputs": [],
    "source": [
     "imbalance_prices = client.query_imbalance_prices(\n",
-    "    country_code='BE',\n",
-    "    start=pd.Timestamp('2020-01-01', tz='Europe/Brussels'),\n",
-    "    end=pd.Timestamp('2023-12-21', tz='Europe/Brussels'),\n",
+    "    country_code=\"BE\",\n",
+    "    start=pd.Timestamp(\"2020-01-01\", tz=\"Europe/Brussels\"),\n",
+    "    end=pd.Timestamp(\"2023-12-21\", tz=\"Europe/Brussels\"),\n",
     ")"
    ]
   }
@@ -104,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
