offtake and injection separately + summary function

--- a/demo_dyntar_analysis.ipynb
+++ b/demo_dyntar_analysis.ipynb
@@ -34,6 +34,7 @@
     "    DynamicTariffAnalysisInput,\n",
     "    DynamicTariffAnalysisOutput,\n",
     "    calculate_dyntar_columns,\n",
+    "    summarize_result,\n",
     ")\n",
     "\n",
     "import seaborn as sns\n",
@@ -318,8 +319,8 @@
        "      <th>electricity_delivered_smr2</th>\n",
        "      <th>electricity_exported_smr2</th>\n",
        "      <th>cost_electricity_delivered_smr2</th>\n",
-       "      <th>cost_electricity_exported_smr2</th>\n",
        "      <th>cost_electricity_delivered_smr3</th>\n",
+       "      <th>cost_electricity_exported_smr2</th>\n",
        "      <th>cost_electricity_exported_smr3</th>\n",
        "      <th>rlp_weighted_price_delivered</th>\n",
        "      <th>spp_weighted_price_exported</th>\n",
@@ -343,8 +344,8 @@
        "      <td>0.025193</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.000103</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>0.000094</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.004102</td>\n",
        "      <td>NaN</td>\n",
@@ -366,8 +367,8 @@
        "      <td>0.024818</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.000102</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>0.000107</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.004102</td>\n",
        "      <td>NaN</td>\n",
@@ -389,8 +390,8 @@
        "      <td>0.024259</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.000100</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>0.000082</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.004102</td>\n",
        "      <td>NaN</td>\n",
@@ -412,8 +413,8 @@
        "      <td>0.023730</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.000097</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>0.000119</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.004102</td>\n",
        "      <td>NaN</td>\n",
@@ -435,8 +436,8 @@
        "      <td>0.133335</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000535</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000080</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.086561</td>\n",
        "      <td>0.062453</td>\n",
@@ -481,8 +482,8 @@
        "      <td>0.039762</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.003802</td>\n",
-       "      <td>-0.0</td>\n",
        "      <td>0.010997</td>\n",
+       "      <td>-0.0</td>\n",
        "      <td>-0.0</td>\n",
        "      <td>0.046355</td>\n",
        "      <td>0.019040</td>\n",
@@ -504,8 +505,8 @@
        "      <td>0.040024</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.003827</td>\n",
-       "      <td>-0.0</td>\n",
        "      <td>0.013388</td>\n",
+       "      <td>-0.0</td>\n",
        "      <td>-0.0</td>\n",
        "      <td>0.046355</td>\n",
        "      <td>0.019040</td>\n",
@@ -527,8 +528,8 @@
        "      <td>0.039903</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.003816</td>\n",
-       "      <td>-0.0</td>\n",
        "      <td>0.011093</td>\n",
+       "      <td>-0.0</td>\n",
        "      <td>-0.0</td>\n",
        "      <td>0.046355</td>\n",
        "      <td>0.019040</td>\n",
@@ -550,8 +551,8 @@
        "      <td>0.038904</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.003720</td>\n",
-       "      <td>-0.0</td>\n",
        "      <td>0.012527</td>\n",
+       "      <td>-0.0</td>\n",
        "      <td>-0.0</td>\n",
        "      <td>0.046355</td>\n",
        "      <td>0.019040</td>\n",
@@ -573,8 +574,8 @@
        "      <td>0.038487</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.003227</td>\n",
-       "      <td>-0.0</td>\n",
        "      <td>0.010985</td>\n",
+       "      <td>-0.0</td>\n",
        "      <td>-0.0</td>\n",
        "      <td>0.046355</td>\n",
        "      <td>0.019040</td>\n",
@@ -682,19 +683,6 @@
        "2024-04-18 20:45:00+00:00                         0.003720   \n",
        "2024-04-18 21:00:00+00:00                         0.003227   \n",
        "\n",
-       "                           cost_electricity_exported_smr2  \\\n",
-       "2023-12-31 23:00:00+00:00                             NaN   \n",
-       "2023-12-31 23:15:00+00:00                             NaN   \n",
-       "2023-12-31 23:30:00+00:00                             NaN   \n",
-       "2023-12-31 23:45:00+00:00                             NaN   \n",
-       "2024-01-01 00:00:00+00:00                             0.0   \n",
-       "...                                                   ...   \n",
-       "2024-04-18 20:00:00+00:00                            -0.0   \n",
-       "2024-04-18 20:15:00+00:00                            -0.0   \n",
-       "2024-04-18 20:30:00+00:00                            -0.0   \n",
-       "2024-04-18 20:45:00+00:00                            -0.0   \n",
-       "2024-04-18 21:00:00+00:00                            -0.0   \n",
-       "\n",
        "                           cost_electricity_delivered_smr3  \\\n",
        "2023-12-31 23:00:00+00:00                         0.000094   \n",
        "2023-12-31 23:15:00+00:00                         0.000107   \n",
@@ -707,6 +695,19 @@
        "2024-04-18 20:30:00+00:00                         0.011093   \n",
        "2024-04-18 20:45:00+00:00                         0.012527   \n",
        "2024-04-18 21:00:00+00:00                         0.010985   \n",
+       "\n",
+       "                           cost_electricity_exported_smr2  \\\n",
+       "2023-12-31 23:00:00+00:00                             NaN   \n",
+       "2023-12-31 23:15:00+00:00                             NaN   \n",
+       "2023-12-31 23:30:00+00:00                             NaN   \n",
+       "2023-12-31 23:45:00+00:00                             NaN   \n",
+       "2024-01-01 00:00:00+00:00                             0.0   \n",
+       "...                                                   ...   \n",
+       "2024-04-18 20:00:00+00:00                            -0.0   \n",
+       "2024-04-18 20:15:00+00:00                            -0.0   \n",
+       "2024-04-18 20:30:00+00:00                            -0.0   \n",
+       "2024-04-18 20:45:00+00:00                            -0.0   \n",
+       "2024-04-18 21:00:00+00:00                            -0.0   \n",
        "\n",
        "                           cost_electricity_exported_smr3  \\\n",
        "2023-12-31 23:00:00+00:00                             0.0   \n",
@@ -815,6 +816,33 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cost_electricity_delivered_smr2    75.351600\n",
+       "cost_electricity_delivered_smr3    83.939318\n",
+       "cost_electricity_exported_smr2     -9.485280\n",
+       "cost_electricity_exported_smr3     -8.439498\n",
+       "cost_electricity_total_smr2        65.866320\n",
+       "cost_electricity_total_smr3        75.499819\n",
+       "ratio                               0.113553\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summarize_result(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "output_model = DynamicTariffAnalysisOutput.from_pandas(df)\n",
@@ -831,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
