Fix PVLibPVSystem arrays type annotation and simplify array creation logic

--- a/pvlib.ipynb
+++ b/pvlib.ipynb
@@ -39,10 +39,12 @@
    "source": [
     "mc = PVLibPVWattsModelChain(\n",
     "    system=PVLibPVSystem(\n",
-    "        arrays=PVLibArray(\n",
-    "            mount=pvlib.pvsystem.FixedMount(surface_tilt=35, surface_azimuth=240),\n",
-    "            modules_per_string=6,\n",
-    "        ),\n",
+    "        arrays=[\n",
+    "            PVLibArray(\n",
+    "                mount=pvlib.pvsystem.FixedMount(surface_tilt=35, surface_azimuth=240),\n",
+    "                modules_per_string=6,\n",
+    "            )\n",
+    "        ],\n",
     "        inverter_parameters=PVWattsInverter(pdc0=2500),\n",
     "    ),\n",
     "    location=PVLibLocation(latitude=51.2, longitude=4.4, tz=\"Europe/Brussels\"),\n",
@@ -60,9 +62,9 @@
     {
      "data": {
       "text/plain": [
-       "{'system': {'arrays': {'mount': {'surface_tilt': 35.0,\n",
-       "    'surface_azimuth': 240.0},\n",
-       "   'modules_per_string': 6},\n",
+       "{'system': {'arrays': [{'mount': {'surface_tilt': 35.0,\n",
+       "     'surface_azimuth': 240.0},\n",
+       "    'modules_per_string': 6}],\n",
        "  'inverter_parameters': {'pdc0': 2500.0}},\n",
        " 'location': {'latitude': 51.2, 'longitude': 4.4, 'tz': 'Europe/Brussels'},\n",
        " 'start': '2020-01-01',\n",
@@ -76,6 +78,27 @@
    ],
    "source": [
     "mc.model_dump(mode=\"json\", exclude_defaults=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d0474874",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PVLibPVWattsModelChain(system=PVLibPVSystem(arrays=[PVLibArray(mount=FixedMount(surface_tilt=35.0, surface_azimuth=240.0, racking_model=None, module_height=None), module_parameters=PVWattsModule(pdc0=420, gamma_pdc=-0.003), modules_per_string=6, strings=1, temperature_model_parameters={'a': -3.47, 'b': -0.0594, 'deltaT': 3})], inverter_parameters=PVWattsInverter(pdc0=2500.0)), location=PVLibLocation(latitude=51.2, longitude=4.4, tz='Europe/Brussels', altitude=None, name=None), start=datetime.date(2020, 1, 1), end=datetime.date(2025, 1, 1), aoi_model='physical', dc_model='pvwatts')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PVLibPVWattsModelChain.model_validate(mc.model_dump(mode=\"json\", exclude_defaults=True))"
    ]
   },
   {
@@ -111,7 +134,7 @@
          "type": "float"
         }
        ],
-       "ref": "ee0be998-9673-4494-856b-8777e6fd63a2",
+       "ref": "85c4da06-3072-4c75-ac0c-319f335a163b",
        "rows": [
         [
          "2020-01-01 00:00:00+01:00",
@@ -377,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a52833d7",
    "metadata": {},
    "outputs": [
@@ -436,7 +459,7 @@
          "type": "float"
         }
        ],
-       "ref": "927bf03f-757f-41e0-b54b-92111ce50f59",
+       "ref": "4ec1ee97-cde1-4278-af50-020bad66cf2c",
        "rows": [
         [
          "2020-01-01 00:00:00+01:00",
@@ -637,7 +660,7 @@
        "2024-01-01 00:00:00+01:00      191.661088  101430.220856  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "6eb16c4c",
    "metadata": {},
    "outputs": [
@@ -707,7 +730,7 @@
          "type": "float"
         }
        ],
-       "ref": "dd910ac7-84c6-41d2-ade5-1af737a8b0c7",
+       "ref": "42e036d2-24bd-4b16-b8bc-388c07a41e21",
        "rows": [
         [
          "2020-01-01 00:00:00+01:00",
@@ -1527,7 +1550,7 @@
        "[175392 rows x 9 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
