Enhance PVLib simulator by adding PVLibSimulationInput class and updating initialization parameters

--- a/pvlib.ipynb
+++ b/pvlib.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openenergyid.pvsim.pvlib import PVLibSimulator, PVLibPVWattsModelChain"
+    "from openenergyid.pvsim.pvlib import PVLibSimulator, PVLibSimulationInput"
    ]
   },
   {
@@ -18,21 +18,23 @@
    "outputs": [],
    "source": [
     "simulation_parameters = {\n",
-    "    \"system\": {  # PV System, consisting of one or more PV arrays and inverters\n",
-    "        \"arrays\": [  # Arrays, consisting of mounts and modules. Default module is 420Wp.\n",
-    "            {\n",
-    "                \"mount\": {  # Mount, defined by tilt and azimuth\n",
-    "                    \"surface_tilt\": 35.0,  # 0 is flat, 90 is vertical\n",
-    "                    \"surface_azimuth\": 240.0,  # 0/360 is north, 180 is south\n",
-    "                },\n",
-    "                \"modules_per_string\": 6,\n",
-    "            }\n",
-    "        ],\n",
-    "        \"inverter_parameters\": {\n",
-    "            \"pdc0\": 2500.0  # Max Power output in Watts\n",
+    "    \"modelchain\": {\n",
+    "        \"system\": {  # PV System, consisting of one or more PV arrays and inverters\n",
+    "            \"arrays\": [  # Arrays, consisting of mounts and modules. Default module is 420Wp.\n",
+    "                {\n",
+    "                    \"mount\": {  # Mount, defined by tilt and azimuth\n",
+    "                        \"surface_tilt\": 35.0,  # 0 is flat, 90 is vertical\n",
+    "                        \"surface_azimuth\": 240.0,  # 0/360 is north, 180 is south\n",
+    "                    },\n",
+    "                    \"modules_per_string\": 6,\n",
+    "                }\n",
+    "            ],\n",
+    "            \"inverter_parameters\": {\n",
+    "                \"pdc0\": 2500.0  # Max Power output in Watts\n",
+    "            },\n",
     "        },\n",
+    "        \"location\": {\"latitude\": 51.2, \"longitude\": 4.4, \"tz\": \"Europe/Brussels\"},\n",
     "    },\n",
-    "    \"location\": {\"latitude\": 51.2, \"longitude\": 4.4, \"tz\": \"Europe/Brussels\"},\n",
     "    \"start\": \"2024-01-01\",\n",
     "    \"end\": \"2025-01-01\",\n",
     "}"
@@ -45,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc = PVLibPVWattsModelChain.model_validate(simulation_parameters)"
+    "input_ = PVLibSimulationInput.model_validate(simulation_parameters)"
    ]
   },
   {
@@ -55,12 +57,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = PVLibSimulator.from_pydantic(mc)"
+    "sim = PVLibSimulator.from_pydantic(input_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "88636927",
    "metadata": {},
    "outputs": [
@@ -79,7 +81,7 @@
          "type": "float"
         }
        ],
-       "ref": "36052957-184e-469b-9ca7-93b39bccd074",
+       "ref": "f16df004-4244-468e-82cf-a53617236298",
        "rows": [
         [
          "2024-01-01 00:00:00+01:00",
@@ -303,7 +305,7 @@
        "Length: 35136, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6b80e57d",
    "metadata": {},
    "outputs": [
@@ -324,7 +326,7 @@
        "<Axes: xlabel='timestamp', ylabel='kWh/15min'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -345,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "cdda05ea",
    "metadata": {},
    "outputs": [
@@ -355,7 +357,7 @@
        "<Axes: xlabel='timestamp', ylabel='kWh'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -373,14 +375,6 @@
    "source": [
     "sim.simulation_results.resample(\"MS\").sum().plot.bar(ylabel=\"kWh\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "897e9fe1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
