Refactor PVLib models and main module to streamline imports and enhance Pydantic integration

--- a/pvlib.ipynb
+++ b/pvlib.ipynb
@@ -25,8 +25,12 @@
     "                    \"mount\": {  # Mount, defined by tilt and azimuth\n",
     "                        \"surface_tilt\": 35.0,  # 0 is flat, 90 is vertical\n",
     "                        \"surface_azimuth\": 240.0,  # 0/360 is north, 180 is south\n",
+    "                        \"kind\": \"fixed\",\n",
+    "                        \"racking_model\": \"open_rack\",\n",
     "                    },\n",
+    "                    \"module_type\": \"glass_glass\",\n",
     "                    \"modules_per_string\": 6,\n",
+    "                    \"module_parameters\": {\"pdc0\": 420, \"gamma_pdc\": -0.003},\n",
     "                }\n",
     "            ],\n",
     "            \"inverter_parameters\": {\n",
@@ -34,6 +38,8 @@
     "            },\n",
     "        },\n",
     "        \"location\": {\"latitude\": 51.2, \"longitude\": 4.4, \"tz\": \"Europe/Brussels\"},\n",
+    "        \"aoi_model\": \"physical\",\n",
+    "        \"dc_model\": \"pvwatts\",\n",
     "    },\n",
     "    \"start\": \"2024-01-01\",\n",
     "    \"end\": \"2025-01-01\",\n",
@@ -52,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5ec1d888",
    "metadata": {},
    "outputs": [],
@@ -62,7 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "id": "8aeca191",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim.load_weather()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "88636927",
    "metadata": {},
    "outputs": [
@@ -81,7 +97,7 @@
          "type": "float"
         }
        ],
-       "ref": "f16df004-4244-468e-82cf-a53617236298",
+       "ref": "8a20409c-a0f6-4859-b6c3-cd6e30fcab5d",
        "rows": [
         [
          "2024-01-01 00:00:00+01:00",
@@ -305,7 +321,7 @@
        "Length: 35136, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6b80e57d",
    "metadata": {},
    "outputs": [
@@ -326,7 +342,7 @@
        "<Axes: xlabel='timestamp', ylabel='kWh/15min'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -347,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "cdda05ea",
    "metadata": {},
    "outputs": [
@@ -357,7 +373,7 @@
        "<Axes: xlabel='timestamp', ylabel='kWh'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -379,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6229929b",
+   "id": "dbf2d1a1",
    "metadata": {},
    "outputs": [],
    "source": []
