Refactor simulation classes and add full simulation analysis module

--- a/demo_simeval.ipynb
+++ b/demo_simeval.ipynb
@@ -237,12 +237,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "48313e07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = evaluate(df)"
+    "results = evaluate(df, return_frequencies=[\"MS\"])"
    ]
   },
   {
